--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                         <h1 class="s-intro__content-title">Our site is launching soon.</h1>
                         <p>
                         Wills discord bots are the best around. 
-                        Contact:
-                            Email: support@willsdiscordbots.club
+                            <br> Contact: </br>
+                    <br> Email: support@willsdiscordbots.club </br>
                         </p>
                     </div>
 
